# Lumocards-One

./: .gitignore  README.md  alphabetizer_receive.txt  alphabetizer_transmit.txt  json_scratch.py  lumo_alphabetizer_2.py  lumo_animationlibrary.py  lumo_calendar_test.py  lumo_cardsrun.py  lumo_filehandler.py  lumo_gettoday.py  lumo_install.sh  lumo_json_utilities.py  lumo_menus.py  lumo_pickacard.py  pyinstaller.sh  pyinstaller_linux.sh  pyinstaller_mac.sh  pyproject.toml
CARDS/CARDS_A_FOCUS_NEAR/: F_NearCard5.txt  R_Town.txt
CARDS/CARDS_D_CALENDAR/: A_AnotherSingleEvent.txt
CARDS/CARDS_E_CHECKLISTS/: A_ChecklistCard1.txt
JOURNAL/: 2025_B_Feb_27__journal.txt  2025_C_Mar_18__journal.txt
LUMO_LIBRARY/: __main__.py  json_scratch.py  lumo_alphabetizer_2.py  lumo_animationlibrary.py  lumo_calendar.py  lumo_calendar_actions.py  lumo_calendar_main.py  lumo_calendar_parsing.py  lumo_calendar_parsing_2.py  lumo_calendar_test.py  lumo_calendar_test_B.py  lumo_calendar_utils.py  lumo_calendar_weekview.py  lumo_card_utils.py  lumo_cards_planner.py  lumo_cardsdisplay_boxformatter.py  lumo_cardsrun.py  lumo_checklist.py  lumo_filehandler.py  lumo_formatters.py  lumo_gettoday.py  lumo_journal.py  lumo_json_utilities.py  lumo_json_utils.py  lumo_main.py  lumo_menus.py  lumo_menus_data.py  lumo_menus_funcs.py  lumo_newcard.py  lumo_newcard_2.py  lumo_newcard_refactor.py  lumo_outlist.py  lumo_pickacard.py  lumo_pomodoro.py  lumo_recurring.py  lumo_samplecards_maker.py  lumo_search.py  lumo_search_cards.py  lumo_settings.py  lumo_timer.py  (+2 more)
PLANNER/: 07APR2025_planner.txt  09MAY2025_planner.txt  10JUN2025_planner.txt  16JAN2025_outline.txt  18JAN2025_outline.txt  21JAN2025_outline.txt  22JAN2025_outline.txt  23JAN2025_planner.txt  23MAR2025_planner.txt  26JAN2025_planner.txt  28MAY2025_planner.txt  30MAY2025_planner.txt
SUPPORT_FILES/: lumocards-one.txt  requirements.txt  settings.json  settings_backup.json
SUPPORT_FILES/INTERNAL_CARDS/: R_CardSampleRecurring.json
SUPPORT_FILES/JSON_CARDS/: A_AnotherSingleEvent.json  A_ArchivedCard1.json  A_Asdf.json  A_Blank6.json  (+89 more)
__SUPPORT_FILES__/: alphabetizer_input.txt  alphabetizer_output.txt  settings.json
(+57 files in other folders)
