[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Lumocards One"
description = "Lumocards for the Command Line / Terminal"
version = "0.3.0"
readme = "README.md"
#requires-python = ??
#license = ??
classifiers = [
    "Programming Language :: Python :: 3",
    "API :: Google Calendar V.3"
]
dependencies = [
    "cachetools == 5.5.0",
    "certifi == 2024.8.30",
    "charset-normalizer == 3.4.0",
    "google-api-core == 2.23.0",
    "google-api-python-client == 2.153.0",
    "google-auth == 2.36.0",
    "google-auth-httplib2 == 0.2.0",
    "google-auth-oauthlib == 1.2.1",
    "googleapis-common-protos == 1.66.0",
    "httplib2 == 0.22.0",
    "idna == 3.10",
    "oauthlib == 3.2.2",
    "proto-plus == 1.25.0",
    "protobuf == 5.28.3",
    "pyasn1 == 0.6.1",
    "pyasn1_modules == 0.4.1",
    "pyparsing == 3.2.0",
    "python-dateutil == 2.9.0.post0",
    "requests == 2.32.3",
    "requests-oauthlib == 2.0.0",
    "rsa == 4.9",
    "Send2Trash == 1.8.3",
    "uritemplate == 4.1.1",
    "urllib3 == 2.2.3",
]

[project-scripts]
lumo = "LUMO_LIBRARY.__main__:main"