[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Lumocards-One"
description = "Lumocards for the Command Line / Terminal"
version = "0.3.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "API :: Google Calendar V.3"
]
dependencies = [
   "cachetools",
   "certifi",
   "charset-normalizer",
   "google-api-core",
   "google-api-python-client",
   "google-auth",
   "google-auth-httplib2",
   "google-auth-oauthlib",
   "googleapis-common-protos",
   "httplib2",
   "idna",
   "oauthlib",
   "proto-plus",
   "protobuf",
   "pyasn1",
   "pyasn1_modules",
   "pyparsing",
   "python-dateutil",
   "requests",
   "requests-oauthlib",
   "rsa",
   "Send2Trash",
   "uritemplate",
   "urllib3",
]

[tool.setuptools]
packages = ["LUMO_LIBRARY"]

[project.scripts]
lumo = "LUMO_LIBRARY.__main__:main"
